# counters

./: .gitignore  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/scripts/: run_app.sh
.github/workflows/: nextjs.yml  readme-ci-.yml  tests-rs.yml  tests-ts.yml  tests.yml
__tests__/: test-template.ava.js
contract-py/: .gitignore  README.md  contract.py  pyproject.toml
contract-py/tests/: test_mod.py
contract-rs/: Cargo.toml  README.md  rust-toolchain.toml  test.sh
contract-rs/src/: lib.rs
contract-rs/tests/: sandbox.rs  test_basics.rs
contract-ts/: README.md  package.json  tsconfig.json
contract-ts/sandbox-test/: main.ava.js
contract-ts/sandbox-ts/: main.ava.ts
contract-ts/scripts/: cli_deploy.sh
contract-ts/src/: contract.ts
contract/src/: contract.ts
counter-js-example/: README.md
counter-js-example/contract/src/: contract.ts
counter-rust-example/: README.md  package.json
counter-rust/contract/src/: lib.rs
counter-rust/frontend/: package-lock.json
frontend/: index.html  index.js  near-interface.js  next.config.js  package.json  tsconfig.json
frontend/.parcel-cache/: 5d102dff0a3f4e7e  e682bab455deb5d4  ec7a7e8ddee0d9ca  f6c2aacc42e8f766.txt  lock.mdb
frontend/src/: config.js  config.ts  global.d.ts  layout.js
frontend/src/components/: Navigation.jsx  Navigation.tsx
frontend/src/hooks/: useNear.tsx
frontend/src/pages/: _app.js  _app.tsx  index.js  index.tsx
frontend/src/styles/: app.module.css  globals.css
frontend/src/wallets/: web3modal.js  web3modal.tsx
frontend_old/: package.json
integration-tests/rs/: Cargo.toml
integration-tests/rs/src/: tests.rs
integration-tests/src/: main.ava.ts
integration-tests/ts/: main.ava.ts
src/: index.js  index.ts
