[package]
name = "counter"
description = "counter example"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.24.0"

[dev-dependencies]
near-sdk = { version = "5.24.0", features = ["unit-testing"] }
near-sandbox = "0.3"
near-api = "0.8"
cargo-near-build = "0.10"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
testresult = "0.4.1"
# This is temporary fix for the build error since those crates with a higher version require a higher version of Rust compiler (1.88.0)
cargo-platform = "=0.3.1"
darling = "=0.20.11"
bon = "=3.8.1"
home = "=0.5.9"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
